Issue #148: Export of combined electoral lists in CSV files