@@ -2,7 +2,9 @@ package net.filipvanlaenen.asapop.website;
 
 import java.nio.file.Path;
 import java.nio.file.Paths;
+import java.util.Arrays;
 import java.util.HashMap;
+import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
@@ -52,7 +54,7 @@ public class CsvFilesBuilder {
             if (csvConfiguration != null) {
                 OpinionPolls opinionPolls = opinionPollsMap.get(areaCode);
                 List<Set<String>> electoralListKeySets = csvConfiguration.getElectoralListKeys().stream()
-                        .map(key -> Set.of(key)).collect(Collectors.toList());
+                        .map(key -> new HashSet<String>(Arrays.asList(key.split("\\+")))).collect(Collectors.toList());
                 String outputContent = EopaodCsvExporter.export(opinionPolls, "--", electoralListKeySets);
                 result.put(Paths.get("_csv", areaCode + ".csv"), outputContent);
             }
